# lyvego

./: .gitignore  LICENSE  README.md  docker-compose.yml  launcher.sh  main.py  makefile  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml
cogs/: help.py  receiver.py  settings.py  slash_commands.py  topGG.py
errors/: __init__.py
locales/: cs.json  cz.json  en.json  es.json  fr.json
src/: __init__.py  constants.py  db.py  utils.py
src/commands/: commands.py
src/twitch/: twitch.py
